              the simplification bug in HomGroupPresentation (see below).
        Class HomGroupPresentation:
            - Fixed a bug in intelligentSimplify(), intelligentNielsen() and
              smallCancellation() where images/preimages of generators were
              potentially being conjugated.  See
              https://regina-normal.github.io/bugs.html for further discussion.
        Class Perm<n>:
            - Extended the generic Perm<n> class to make its API as rich as the
              specialised classes for smaller n.  This means the generic class
              now supports ++ and < operators, pow(), order(), and
              isConjugacyMinimal().
            - Optimised several algorithms for the generic Perm<n> class
              that were originally quadratic in n.
            - The generic Perm<n> now offers the precomptuation-assisted
              operations cachedInverse().
            - New routines conjugate() and cachedConjugate(), to replace the
              three-way cachedComp() (which was designed for conjugation).
              The three-way cachedComp() is now deprecated; instead call
              cachedConjugate() if you are conjugating, or else call the
              two-way cachedComp() twice.
            - All Perm<n> classes now have precompute(), cachedInverse(),
              cachedComp(), cachedPow() and cachedOrder(), even for smaller n
              where these are unnecessary, to assist with writing generic code.
        Class PermClass<n>:
            - New class to describe a conjugacy class of permutations.
        Class PermGroup<n>:
            - New class to describe groups of permutations.
        Class SnapPeaTriangulation:
            - Fixed a buffer overflow in the SnapPea kernel, which was
              accessible via SnapPeaTriangulation::snapPea().
        Class Triangulation<dim>, TriangulationBase<dim>:
            - The copy constructor and copy assignment operator now clones