@@ -62,3 +62,13 @@
 -10000000000000000000000000000
 3141592
 1234567
+123
+<class 'int'> 123
+-123456789123456789123456789123456789123456789123456789
+<class 'int'> -123456789123456789123456789123456789123456789123456789
+123
+<class 'int'> 123
+-123456789123456789123456789123456789123456789123456789
+<class 'int'> -123456789123456789123456789123456789123456789123456789
+inf
+Could not convert
